# k-dense-ai-k-dense-byok

./: README.md  litellm_callbacks.py  litellm_config.yaml  prep_sandbox.py  pyproject.toml  server.py  start.sh
docs/: custom-mcp-servers.md
kady_agent/: agent.py  citations.py  cost_ledger.py  env.example  gemini_settings.py  manifest.py  mcp_oauth.py  mcps.py  project_session_service.py  projects.py  projects_api.py  replay.py  utils.py
kady_agent/instructions/: gemini_cli.md  main_agent.md
kady_agent/tools/: gemini_cli.py
tests/: test_gemini_cli_tool.py  test_gemini_settings.py  test_manifest.py  test_mcp_oauth.py  test_projects.py  test_server_integration.py
web/src/: pdfjs.d.ts
web/src/app/: layout.tsx  page.tsx
web/src/components/: add-context-menu.tsx  browser-selector.tsx  citation-badge.tsx  claims-badge.tsx  compute-selector.tsx  context-chips.tsx  database-selector.tsx  file-preview-panel.tsx  latex-editor.tsx  model-selector.tsx  project-switcher.tsx  provenance-panel.tsx  sandbox-panel.tsx  session-cost-pill.tsx  settings-dialog.tsx  skills-selector.tsx
web/src/components/ai-elements/: file-tree.tsx  speech-input.tsx
web/src/components/pdf-viewer/: pdf-viewer.tsx
web/src/components/ui/: info-tooltip.tsx
web/src/data/: models.json
web/src/lib/: provenance.ts  use-agent.ts  use-sandbox.ts  use-session-cost.ts  use-settings.ts
